# batrena

./: README.md  pubspec.yaml
android/: build.gradle
android/app/: build.gradle
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: AppDelegate.swift  GeneratedPluginRegistrant.m  Info.plist  Runner-Bridging-Header.h  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_generated.dart  loadLib.dart  main.dart
lib/cubit/add_branch/: add_branch_cubit.dart  add_branch_state.dart
lib/cubit/add_item/: add_item_cubit.dart  add_item_state.dart
lib/cubit/branch_details_cubit/: branch_details_cubit.dart  branch_details_state.dart
lib/cubit/branch_view/: branch_view_cubit.dart  branch_view_state.dart
lib/cubit/change_shift/: change_shift_cubit.dart  (+1 more)
lib/models/: branch_model.dart
lib/shared/: colors.dart  themes.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
native/: Cargo.toml
native/ImagePixelReplacer.xcodeproj/: project.pbxproj
native/ImagePixelReplacer.xcodeproj/xcshareddata/xcschemes/: ImagePixelReplacer-bin.xcscheme  ImagePixelReplacer-cdylib.xcscheme  ImagePixelReplacer-staticlib.xcscheme
native/ImagePixelReplacer.xcodeproj/xcuserdata/shawket.xcuserdatad/xcschemes/: xcschememanagement.plist
native/src/: apis.rs  bridge_generated.io.rs  bridge_generated.rs  main.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+41 files in other folders)
