[package]
name = "ImagePixelReplacer"

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ImagePixelReplacer"
crate-type = ["lib", "staticlib", "cdylib"]
[dependencies]
image = "0.23.14"
flutter_rust_bridge = "1.0"
flutter_rust_bridge_codegen = "1.75.1"
#cargo-xcode = "1.5.0"
serde = "1.0.160"
serde_json = "1.0.96"
anyhow = "1.0.70"
#ndk = "0.7.0"
